--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,19 @@
+# Core FastAPI dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 python-multipart==0.0.6
+
+# AI/ML dependencies
 scikit-learn==1.3.2
 transformers==4.36.0
 torch==2.1.0
 numpy==1.24.3
-pandas==2.1.4
-matplotlib==3.8.2
-seaborn==0.13.0
+
+# Configuration
 python-dotenv==1.0.0
 pydantic-settings==2.0.3
+
+# Testing dependencies (optional)
 pytest==7.4.3
 httpx==0.25.2
